[package]
name = "bitcoin-script-stack"
description = "Bitcoin script stack tracking tool and deubgger"
version = "0.0.1"
edition = "2021"
authors = ["Martin Jonas <martinjonas@gmail.com>"]
repository = "https://github.com/FairgateLabs/rust-bitcoin-script-stack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin-script = { git = "https://github.com/commonprefix/rust-bitcoin-script", branch = "StructuredScript" }
bitcoin = { git = "https://github.com/commonprefix/rust-bitcoin-storopoli", branch = "bitvm", features=["serde"] }
bitcoin-scriptexec = { git = "https://github.com/commonprefix/rust-bitcoin-scriptexec/"}
crossterm = { version = "0.27.0", optional = true}
hex = "0.4.3"

[features]
interactive = ["crossterm"]

[patch.crates-io.base58ck]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"

[patch.crates-io.bitcoin]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"
features=["serde"]

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"

[patch.crates-io.bitcoin-io]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"

[patch.crates-io.bitcoin-units]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"

[patch.crates-io.bitcoin-primitives]
git = "https://github.com/commonprefix/rust-bitcoin-storopoli"
branch = "bitvm"
